--- a/restablecer_contraseña.css
+++ b/restablecer_contraseña.css
@@ -9,7 +9,7 @@ body {
 	background-color: #eee;
 	height: 91vh;
 	font-family: 'Poppins', sans-serif;
-	background: linear-gradient(to top, #fff 10%, rgb(255, 162, 241) 90%) no-repeat;
+	background-image: linear-gradient(to bottom, rgba(255, 149, 237, 0.425), rgba(0, 0, 0, 0)), url(img/fondoNuevo.png);
 }
 
 .wrapper {
